# Real-time-Face-Recognition

./: README.md  pyproject.toml
src/realtime_face_recognition/: __init__.py  capture_faces.py  cli.py  config.py  detection.py  recognize.py  train_model.py
tests/: test_imports.py
