[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "realtime-face-recognition-opencv"
version = "0.1.0"
description = "Real-time face detection and recognition with Python and OpenCV (Haar cascades + LBPH)."
readme = "README.md"
authors = [
  { name = "Mobin Yousefi", email = "" },
]
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["computer-vision", "opencv", "face-recognition", "haar-cascade", "lbph"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "Topic :: Scientific/Engineering :: Image Recognition",
]

dependencies = [
  "opencv-contrib-python>=4.10.0",
  "numpy>=1.26",
]

[project.urls]
Homepage = "https://github.com/mobinyousefi-cs/realtime-face-recognition-opencv"
"Bug Tracker" = "https://github.com/mobinyousefi-cs/realtime-face-recognition-opencv/issues"

[project.scripts]
realtime-face-recognition = "realtime_face_recognition.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
